# 3d-mesh-forge

./: README.md  devbox.json  flake.nix  package.json  pnpm-lock.yaml  pyproject.toml
backend/: package.json
backend/src/: index.ts
client/: index.html  package.json  pnpm-lock.yaml  vite.cofig.js
client/src/: button.ts  createScene.ts  main.ts  mesh-data.ts  style.css  tweakpane.ts
client/src/store/: store.ts
src/_3d_mesh_forge/: __init__.py
