[project]
name = "3d-mesh-forge"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shun murakami", email = "shun_murakami@earthbrain.com" }
]
dependencies = [
    "blender>=1.4",
]
readme = "README.md"
requires-python = ">= 3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_3d_mesh_forge"]
